# diskonaut

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  snap.txt
.github/workflows/: CICD.yml
src/: app.rs  main.rs  rectangle_grid.rs
src/display/: mod.rs  rectangle_grid.rs  state.rs
src/events/: blinker.rs  event_bus.rs  mod.rs
src/filesystem/: mod.rs  scan_folder.rs
src/input/: controls.rs  file_or_folder.rs  filesystem.rs  mod.rs  signals.rs
src/messages/: event.rs  instruction.rs  mod.rs
src/os/: linux.rs  mod.rs  unix.rs  windows.rs
src/state/: file_to_delete.rs  file_tree.rs  mod.rs  tiles.rs  ui_effects.rs
src/state/files/: file_or_folder.rs  file_tree.rs  mod.rs
src/state/tiles/: board.rs  files_in_folder.rs  mod.rs  rect_float.rs  tile.rs  treemap.rs
src/tests/: mod.rs
src/tests/cases/: mod.rs  test_utils.rs  ui.rs
src/tests/cases/snapshots/: diskonaut__tests__cases__ui__cannot_move_into_small_files-2.snap  diskonaut__tests__cases__ui__cannot_move_into_small_files.snap  diskonaut__tests__cases__ui__delete_file-3.snap  (+267 more)
src/tests/fakes/: fake_input.rs  fake_output.rs
src/ui/: bottom_line.rs  display.rs  display_size.rs  draw_symbol.rs  error_box.rs  message_box.rs  mod.rs  rectangle_grid.rs  state.rs  term_too_small.rs  tiles.rs  title_line.rs  treemap.rs
src/ui/format/: display_size.rs  mod.rs  truncate.rs  truncate_middle.rs
src/ui/grid/: draw_next_symbol.rs  draw_rect.rs  draw_symbol.rs  mod.rs  rectangle_grid.rs
src/ui/modals/: confirm_box.rs  error_box.rs  message_box.rs  mod.rs  warning_box.rs
src/ui/title/: base_path.rs  current_path.rs  mod.rs  space_freed.rs  title_line.rs  title_telescope.rs  title_text.rs
src/util/: mod.rs
