[package]
name = "diskonaut"
description = "Terminal disk space visual navigator"
version = "0.1.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
homepage = "https://github.com/imsnif/diskonaut"
repository = "https://github.com/imsnif/diskonaut"
description = ""
license = "MIT"
edition = "2018"

[dependencies]
tui = "0.5"
termion = "1.5"
failure = "0.1"
walkdir = "2"
signal-hook = "0.1.10"
structopt = "0.3"

[dev-dependencies]
insta = "0.12.0"
cargo-insta = "0.11.0"
