[package]
name = "diskonaut"
description = "Terminal disk space visual navigator"
version = "0.3.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
readme = "README.md"
homepage = "https://github.com/imsnif/diskonaut"
repository = "https://github.com/imsnif/diskonaut"
license = "MIT"
edition = "2018"

[dependencies]
tui = "0.9"
termion = "1.5"
failure = "0.1"
jwalk = "0.5"
signal-hook = "0.1.10"
structopt = "0.3"
filesize = "0.2.0"
unicode-width = "0.1.7"

[dev-dependencies]
insta = "0.16.0"
