[package]
name = "diskonaut"
description = "Terminal disk space visual navigator"
version = "0.11.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
readme = "README.md"
homepage = "https://github.com/imsnif/diskonaut"
repository = "https://github.com/imsnif/diskonaut"
license = "MIT"
edition = "2018"

[dependencies]
tui = {version="0.11", default-features = false, features = ['crossterm'] }
crossterm = "0.17"
failure = "0.1"
jwalk = "0.6"
structopt = "0.3"
filesize = "0.2.0"
unicode-width = "0.1.7"
nix = "0.17.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["securitybaseapi","debugapi"] }

[dev-dependencies]
insta = "0.16.0"
